src/objects/PRM_User__c.object
<CustomObject>
    <fields>
        <fullName>PRM_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRM Config</label>
        <referenceTo>PRM_Config__c</referenceTo>
        <relationshipLabel>PRM Users</relationshipLabel>
        <relationshipName>PRM_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName &amp; &apos; &apos; &amp;  User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PRM_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PRM User</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>PRM User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>